--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  
   <title>Genetic Traveling Salesman</title>
   <script src="./p5.js"></script>
+  <script src="./Specie.js"></script>
   <script src="./main.js"></script>
   <style>
     * {
