--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Genetic Algorithm - Multi-Viewport 3D</title>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+        background-color: #000;
+      }
+      canvas {
+        display: block;
+      }
+      .label {
+        position: absolute;
+        color: white;
+        font-family: monospace;
+        font-size: 12px;
+        background: rgba(0, 0, 0, 0.6);
+        padding: 4px;
+        border-radius: 4px;
+      }
+    </style>
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+    <script src="./createTextSprite.js"></script>
+    <script src="./createWellDistributedPoints.js"></script>
+    <script src="./genUtils.js"></script>
+    <script src="./Location.js"></script>
+    <script src="./Specie.js"></script>
+    <script src="./utils.js"></script>
+    <script src="./rayCast.js"></script>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
- 
-  <title>Genetic Traveling Salesman</title>
-  <script src="./p5.js"></script>
-  <script src="./Specie.js"></script>
-  <script src="./main.js"></script>
- 
-  <style>
-    * {
-      margin: 0;
-      border: 0;
-      caret-color: transparent;
-      overflow: hidden;
-
-    }
-
-    
-  </style>
-</head>
-
-<body>
- 
- 
- 
-</body>
-
+    <script src="./main.js"></script>
+    <canvas id="canvas"></canvas>
+  </body>
 </html>
